# SlicerDBSCoalignment

./: README.md
slicer_mer_stn/: CMakeLists.txt
slicer_mer_stn/AtlasMapping/: AtlasMapping.py  CMakeLists.txt
slicer_mer_stn/AtlasMapping/Resources/UI/: AtlasMapping.ui
slicer_mer_stn/AtlasMapping/Resources/eparams/: affine.txt  atlas_pts.txt  bspline.txt
slicer_mer_stn/DBS_STN/: CMakeLists.txt  DBSShiftPrediction.py  image_utils.py  load_nifty.py  slicer_preprocessing.py  utils_file.py
slicer_mer_stn/DBS_STN/Lib/: image_utils.py  mer_support.py  slicer_preprocessing.py  visualisiation.py
slicer_mer_stn/DBS_STN/Resources/UI/: DBSShiftPrediction.ui  load_nifty.ui
slicer_mer_stn/DBS_STN/Resources/elastix/: affine_mri.txt
slicer_mer_stn/DBS_STN/Resources/nets/: cent_detect_hist.pkl  cent_pred.pt  detect_mask.pkl  mer_pca_mesh.pkl  net_transformer.pt  shape_hist.pkl  shp_pred.pt  stn_shape_mask.pkl  transformer_classifier.pt
slicer_mer_stn/DBS_STN/Resources/py/: bet.py
slicer_mer_stn/LabelConversion/: CMakeLists.txt  LabelConversion.py
slicer_mer_stn/LabelConversion/Resources/UI/: LabelConversion.ui
slicer_mer_stn/STNSegmenter/: CMakeLists.txt  STNSegmenter.py
slicer_mer_stn/STNSegmenter/Resources/Smk_utils/: 2_step_coregistration.smk  coregister_im_2_im.smk
slicer_mer_stn/STNSegmenter/Resources/py/: bet.py
slicer_mer_stn/STNSegmenter/segm_lib/: image_utils.py  mer_support.py  slicer_preprocessing.py  utils_file.py
slicer_mer_stn/ShiftCLI/: CMakeLists.txt  ShiftCLI.py  ShiftCLI.xml
slicer_mer_stn/TextToMarkups/: CMakeLists.txt  TextToMarkups.py
(+12 files in other folders)
